[package]
name = "os_project"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

# usado para "cargo build"
[profile.dev]
panic = "abort" # disables stack unwiding on panic

# usado para "cargo build --release"
[profile.release]
panic = "abort"

[unstable]
build-std = ["core", "compiler_builtins"]